[tool.poetry]
name = "stramate"
version = "0.1.0"
description = "Your Strava mate"
authors = ["manhtai <vo@manhtai.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Django = "^3.2.20"
dj-database-url = "^0.5.0"
whitenoise = "^6.0.0"
social-auth-app-django = "^5.0.0"
heroicons = {extras = ["django"], version = "^1.3.0"}
huey = "^2.4.7"
polyline = "^1.4.0"
django-dotenv = "^1.4.2"
django-grappelli = "^2.15.3"
gunicorn = "^21.2.0"
sentry-sdk = "^1.18.0"
pandas = "^2.2.3"
django-tailwind = "^3.8.0"
stravalib = "^2.1"
setuptools = "^75.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.15.0"
honcho = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"